# VT1-Python-Files

./: Functions.py  Functions_test.py  NPV_Export.xlsx  PEP_Block3_Ex - Kopie.xlsx  Sample.xlsx  VT1_with_Matrix_Import.ipynb  VT1_with_implemented_Data.ipynb  VT_test_file.ipynb  output.xlsx  pep.ipynb  pyproject.toml  vt_env.yml
VT1 VS Code/: Functions.py  Functions_test.py  NPV_test.ipynb  Optimization.ipynb  README.md  VT1_with_Matrix_Import.ipynb  VT1_with_implemented_Data.ipynb  VT_test_file.ipynb  flexES.py  output.xlsx
VT2 VS Code/: Functions_VT2.py  Optimize_Trials_VT2.ipynb  VT2.ipynb
