[tool.poetry]
name = "mse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.3"
openpyxl = "^3.1.2"
scipy = "^1.12.0"
geneticalgorithm = "^1.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
